--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 chrono = "0.4"
 serde_json = "1"
-clap = { version = "3.2.10", features = ["derive"] }
-reqwest = { version = "0.11", features = ["json"] }
+async-stream = "0.3"
+bytes = "1"
+clap = { version = "3.2", features = ["derive"] }
+reqwest = { version = "0.11", features = ["json", "stream"] }
 tokio = { version = "1", features = ["full"] }
