--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -63,13 +63,10 @@ jobs:
           cd build
           ./build-release -t ${{ matrix.target }} $compile_features $compile_compress
 
-      - name: Upload Github Assets
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3.1.0
         with:
-          files: build/release/*
-          prerelease: ${{ contains(github.ref, '-') }}
+          path: build/release/*
 
   build-unix:
     runs-on: ${{ matrix.os }}
@@ -112,13 +109,10 @@ jobs:
         run: |
           ./build/build-host-release -t ${{ matrix.target }}
 
-      - name: Upload Github Assets
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3.1.0
         with:
-          files: build/release/*
-          prerelease: ${{ contains(github.ref, '-') }}
+          path: build/release/*
 
   build-windows:
     runs-on: windows-latest
@@ -140,10 +134,7 @@ jobs:
         run: |
           pwsh ./build/build-host-release.ps1
 
-      - name: Upload Github Assets
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3.1.0
         with:
-          files: build/release/*
-          prerelease: ${{ contains(github.ref, '-') }}
+          path: build/release/*
