--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -43,25 +43,8 @@ jobs:
       - name: Build ${{ matrix.target }}
         timeout-minutes: 120
         run: |
-          compile_target=${{ matrix.target }}
-
-          if [[ "$compile_target" == *"-linux-"* || "$compile_target" == *"-apple-"* ]]; then
-            compile_features="-f local-redir -f local-tun"
-          fi
-
-          if [[ "$compile_target" == "mips-"* || "$compile_target" == "mipsel-"* || "$compile_target" == "mips64-"* || "$compile_target" == "mips64el-"* ]]; then
-            sudo apt-get update -y && sudo apt-get install -y upx;
-            if [[ "$?" == "0" ]]; then
-              compile_compress="-u"
-            fi
-          fi
-
-          if [[ "$compile_target" == "aarch64-"* ]]; then
-            compile_features="$compile_features -f armv8 -f neon"
-          fi
-
-          cd build
-          ./build-release -t ${{ matrix.target }} $compile_features $compile_compress
+          cross build --target ${{ matrix.target }} --release
+          mkdir -p build/release; mv target/${{ matrix.target }}/release/bim build/release/bim-${{ github.ref_name }}-${{ matrix.target }}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3.1.0
@@ -107,7 +90,8 @@ jobs:
       - name: Build release
         shell: bash
         run: |
-          ./build/build-host-release -t ${{ matrix.target }}
+          cross build --target ${{ matrix.target }} --release
+          mkdir -p build/release; mv target/${{ matrix.target }}/release/bim build/release/bim-${{ github.ref_name }}-${{ matrix.target }}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3.1.0
@@ -132,7 +116,8 @@ jobs:
 
       - name: Build release
         run: |
-          pwsh ./build/build-host-release.ps1
+          cross build --target ${{ matrix.target }} --release
+          mkdir -p build/release; mv target/${{ matrix.target }}/release/bim build/release/bim-${{ github.ref_name }}-${{ matrix.target }}
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3.1.0
