--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Build ${{ matrix.target }}
         timeout-minutes: 120
         run: |
-          apt install -y libssl-dev
+          sudo apt install -y libssl-dev
           cross build --target ${{ matrix.target }} --release
           mkdir -p build/release; mv target/${{ matrix.target }}/release/bim build/release/bim-${{ github.ref_name }}-${{ matrix.target }}
 
