--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -24,15 +24,11 @@ jobs:
           default: true
           override: true
 
-      - name: Install cross
-        run: cargo install cross
-
       - name: Build ${{ matrix.target }}
         timeout-minutes: 120
         run: |
-          sudo apt install -y libssl-dev
-          cross build --target x86_64-unknown-linux-musl --release
-          mv target/x86_64-unknown-linux-musl/release/bim build/release/bim-${{ github.ref_name }}-x86_64
+          cargo build -r
+          mv target/release/bim build/release/bim-${{ github.ref_name }}-x86_64
           mkdir -p build/release
 
       - name: Upload Artifacts
