--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -28,8 +28,8 @@ jobs:
         timeout-minutes: 120
         run: |
           cargo build -r
-          mv target/release/bim build/release/bim-${{ github.ref_name }}-x86_64
           mkdir -p build/release
+          mv bim build/release/bim-${{ github.ref_name }}-x86_64
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3.1.0
