--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           cargo build -r
           mkdir -p build/release
-          mv bim build/release/bim-${{ github.ref_name }}-x86_64
+          mv /home/runner/work/bim/bim build/release/bim-${{ github.ref_name }}-x86_64
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3.1.0
