--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ serde_json = "1"
 async-stream = "0.3"
 bytes = "1"
 clap = { version = "3.2", features = ["derive"] }
-reqwest = { version = "0.11", features = ["json", "stream"] }
+reqwest = { version = "0.11", features = ["json", "stream", "native-tls-vendored"] }
 tokio = { version = "1", features = ["full"] }
