--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -14,6 +14,7 @@ jobs:
       matrix:
         target:
           - x86_64-unknown-linux-musl
+          - aarch64-unknown-linux-musl
 
     steps:
       - uses: actions/checkout@v2
