--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -13,8 +13,12 @@ jobs:
     strategy:
       matrix:
         target:
+          - i586-unknown-linux-musl
           - x86_64-unknown-linux-musl
+          - armv7-unknown-linux-musleabi
           - aarch64-unknown-linux-musl
+          - mipsel-unknown-linux-musl
+          - mips64el-unknown-linux-muslabi64
 
     steps:
       - uses: actions/checkout@v2
