--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -1,5 +1,8 @@
 name: Build Releases
-on: push
+on:
+  push:
+    tags:
+      - v*
 
 env:
   CARGO_TERM_COLOR: always
@@ -37,6 +40,19 @@ jobs:
 
       - name: Build ${{ matrix.target }}
         timeout-minutes: 120
+        env:
+          - OUPUT_FILENAME: bim-${{ github.ref_name }}-${{ matrix.target }}
         run: |
           cross build --target ${{ matrix.target }} -r
-          ls -lR
+          mkdir -p ./build/release
+          cp ./target/${{ matrix.target }}/release/bim ./build/release/$OUPUT_FILENAME
+          cd ./build/release
+          shasum -a 256 $OUPUT_FILENAME > $OUPUT_FILENAME.sha256"
+
+      - name: Upload Github Assets
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: build/release/*
+          prerelease: ${{ contains(github.ref, '-') }}
