--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -47,7 +47,7 @@ jobs:
           mkdir -p ./build/release
           cp ./target/${{ matrix.target }}/release/bim ./build/release/$OUPUT_FILENAME
           cd ./build/release
-          shasum -a 256 $OUPUT_FILENAME > $OUPUT_FILENAME.sha256"
+          shasum -a 256 $OUPUT_FILENAME > $OUPUT_FILENAME.sha256
 
       - name: Upload Github Assets
         uses: softprops/action-gh-release@v1
