--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -76,13 +76,51 @@ jobs:
       - name: Build
         timeout-minutes: 120
         env:
-          OUPUT_FILENAME: bim-${{ github.ref_name }}-windows.exe
+          OUPUT_FILENAME: bim-${{ github.ref_name }}-windows
         run: |
           cargo build -r
           mkdir -p ./build/release
-          cp ./target/release/bim.exe ./build/release/$env:OUPUT_FILENAME
+          cp ./target/release/bim.exe ./build/release/$env:OUPUT_FILENAME.exe
           cd ./build/release
-          Get-FileHash $env:OUPUT_FILENAME | Format-List > $env:OUPUT_FILENAME.sha256
+          Get-FileHash $env:OUPUT_FILENAME.exe | Format-List > $env:OUPUT_FILENAME.sha256
+          ls
+
+      - name: Upload Github Assets
+        uses: softprops/action-gh-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: build/release/*
+          prerelease: ${{ contains(github.ref, '-') }}
+  
+  build-macos:
+    runs-on: macos-latest
+    env:
+      RUST_BACKTRACE: full
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: nightly
+          default: true
+          override: true
+
+      - name: Build
+        timeout-minutes: 120
+        env:
+          OUPUT_FILENAME: bim-${{ github.ref_name }}-macos
+        run: |
+          cargo build -r
+          mkdir -p ./build/release
+          ls -lR
+          cp ./target/release/bim ./build/release/$OUPUT_FILENAME
+          cd ./build/release
+          shasum -a 256 $OUPUT_FILENAME > $OUPUT_FILENAME.sha256
+          ls
 
       - name: Upload Github Assets
         uses: softprops/action-gh-release@v1
