--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -77,13 +77,13 @@ jobs:
         timeout-minutes: 120
         env:
           OUPUT_FILENAME: bim-${{ github.ref_name }}-windows
+          OUPUT_FILENAME_EXE: bim-${{ github.ref_name }}-windows.exe
         run: |
           cargo build -r
           mkdir -p ./build/release
-          cp ./target/release/bim.exe ./build/release/$env:OUPUT_FILENAME.exe
+          cp ./target/release/bim.exe ./build/release/$env:OUPUT_FILENAME_EXE
           cd ./build/release
-          Get-FileHash $env:OUPUT_FILENAME.exe | Format-List > $env:OUPUT_FILENAME.sha256
-          ls
+          Get-FileHash $env:OUPUT_FILENAME_EXE | Format-List > $env:OUPUT_FILENAME.sha256
 
       - name: Upload Github Assets
         uses: softprops/action-gh-release@v1
@@ -116,11 +116,9 @@ jobs:
         run: |
           cargo build -r
           mkdir -p ./build/release
-          ls -lR
           cp ./target/release/bim ./build/release/$OUPUT_FILENAME
           cd ./build/release
           shasum -a 256 $OUPUT_FILENAME > $OUPUT_FILENAME.sha256
-          ls
 
       - name: Upload Github Assets
         uses: softprops/action-gh-release@v1
