--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -76,14 +76,14 @@ jobs:
       - name: Build
         timeout-minutes: 120
         env:
-          OUPUT_FILENAME: bim-${{ github.ref_name }}-windows
-          OUPUT_FILENAME_EXE: bim-${{ github.ref_name }}-windows.exe
+          OUPUT_FILENAME: bim-${{ github.ref_name }}-windows.exe
+          OUPUT_FILENAME_SHA: bim-${{ github.ref_name }}-windows.sha256
         run: |
           cargo build -r
           mkdir -p ./build/release
-          cp ./target/release/bim.exe ./build/release/$env:OUPUT_FILENAME_EXE
+          cp ./target/release/bim.exe ./build/release/$env:OUPUT_FILENAME
           cd ./build/release
-          Get-FileHash $env:OUPUT_FILENAME_EXE | Format-List > $env:OUPUT_FILENAME.sha256
+          Get-FileHash $env:OUPUT_FILENAME | Format-List > $env:OUPUT_FILENAME_SHA
 
       - name: Upload Github Assets
         uses: softprops/action-gh-release@v1
