--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,6 @@ bytes = "1"
 clap = { version = "3.2", features = ["derive"] }
 reqwest = { version = "0.11", features = ["json", "stream", "native-tls-vendored"] }
 tokio = { version = "1", features = ["full"] }
+
+[target.'cfg(windows)'.dependencies]
+winapi = { version = "0.3", features = ["winuser"] }
