--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,13 +24,13 @@ jobs:
       - name: Build and test
         timeout-minutes: 120
         run: |
-          cargo build -r
-          ./target/release/bim 595
+          cargo build
+          ./target/debug/bim 595
       
       - uses: actions/upload-artifact@v3
         with:
           name: bim-linux
-          path: target/release/bim
+          path: target/debug/bim
   
   build-windows:
     runs-on: windows-latest
@@ -51,13 +51,13 @@ jobs:
       - name: Build and test
         timeout-minutes: 120
         run: |
-          cargo build -r
-          ./target/release/bim.exe 595
+          cargo build
+          ./target/debug/bim.exe 595
       
       - uses: actions/upload-artifact@v3
         with:
           name: bim-windows
-          path: target/release/bim.exe
+          path: target/debug/bim.exe
   
   build-macos:
     runs-on: macos-latest
@@ -78,10 +78,10 @@ jobs:
       - name: Build and test
         timeout-minutes: 120
         run: |
-          cargo build -r
-          ./target/release/bim 595
+          cargo build
+          ./target/debug/bim 595
       
       - uses: actions/upload-artifact@v3
         with:
           name: bim-macos
-          path: target/release/bim
+          path: target/debug/bim
