--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ chrono = "0.4"
 serde_json = "1"
 async-stream = "0.3"
 bytes = "1"
+trust-dns-resolver = "0.21"
 clap = { version = "3.2", features = ["derive"] }
 reqwest = { version = "0.11", features = ["json", "stream", "native-tls-vendored"] }
 tokio = { version = "1", features = ["full"] }
