--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ async-stream = "0.3"
 bytes = "1"
 trust-dns-resolver = "0.21"
 machine-uid = "0.2"
+base64 = "0.13"
+log = "0.4"
+env_logger = "0.9"
 clap = { version = "3.2", features = ["derive"] }
 reqwest = { version = "0.11", features = ["json", "stream", "native-tls-vendored"] }
 tokio = { version = "1", features = ["full"] }
