--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -16,12 +16,8 @@ jobs:
     strategy:
       matrix:
         target:
-          - i586-unknown-linux-musl
           - x86_64-unknown-linux-musl
-          - armv7-unknown-linux-musleabi
           - aarch64-unknown-linux-musl
-          - mipsel-unknown-linux-musl
-          - mips64el-unknown-linux-muslabi64
 
     steps:
       - uses: actions/checkout@v2
@@ -29,25 +25,37 @@ jobs:
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
-          profile: minimal
           target: ${{ matrix.target }}
           toolchain: nightly
           default: true
           override: true
-
+      
       - name: Install cross
         run: cargo install cross
 
       - name: Build ${{ matrix.target }}
-        timeout-minutes: 120
-        env:
-          OUPUT_FILENAME: bim-${{ github.ref_name }}-${{ matrix.target }}
+        timeout-minutes: 15
         run: |
-          cross build --target ${{ matrix.target }} -r
           mkdir -p ./build/release
-          cp ./target/${{ matrix.target }}/release/bim ./build/release/$OUPUT_FILENAME
+          export RUSTFLAGS="-C link-arg=-lgcc -Clink-arg=-static-libgcc"
+          cross build --target ${{ matrix.target }} -r -Z build-std=std,panic_abort -Z build-std-features=panic_immediate_abort
+          cp ./target/${{ matrix.target }}/release/bimc ./build/release/bimc-${{ matrix.target }}
+          cp ./target/${{ matrix.target }}/release/bim ./build/release/bim-${{ matrix.target }}
+      
+      - name: UPX
+        uses: crazy-max/ghaction-upx@v2
+        with:
+          version: latest
+          files: |
+            ./build/release/bimc-${{ matrix.target }}
+            ./build/release/bim-${{ matrix.target }}
+          args: --best --lzma
+      
+      - name: sha256
+        run: |
           cd ./build/release
-          shasum -a 256 $OUPUT_FILENAME > $OUPUT_FILENAME.sha256
+          shasum -a 256 bimc-${{ matrix.target }} > bimc-${{ matrix.target }}.sha256
+          shasum -a 256 bim-${{ matrix.target }} > bim-${{ matrix.target }}.sha256
 
       - name: Upload Github Assets
         uses: softprops/action-gh-release@v1
@@ -56,7 +64,7 @@ jobs:
         with:
           files: build/release/*
           prerelease: ${{ contains(github.ref, '-') }}
-  
+
   build-windows:
     runs-on: windows-latest
     env:
@@ -74,16 +82,15 @@ jobs:
           override: true
 
       - name: Build
-        timeout-minutes: 120
-        env:
-          OUPUT_FILENAME: bim-${{ github.ref_name }}-windows.exe
-          OUPUT_FILENAME_SHA: bim-${{ github.ref_name }}-windows.sha256
+        timeout-minutes: 15
         run: |
           cargo build -r
           mkdir -p ./build/release
-          cp ./target/release/bim.exe ./build/release/$env:OUPUT_FILENAME
+          cp ./target/release/bimc.exe ./build/release/bimc.exe
+          cp ./target/release/bim.exe ./build/release/bim.exe
           cd ./build/release
-          Get-FileHash $env:OUPUT_FILENAME | Format-List > $env:OUPUT_FILENAME_SHA
+          Get-FileHash bimc.exe | Format-List > bimc.exe.sha256
+          Get-FileHash bim.exe | Format-List > bim.exe.sha256
 
       - name: Upload Github Assets
         uses: softprops/action-gh-release@v1
@@ -92,7 +99,7 @@ jobs:
         with:
           files: build/release/*
           prerelease: ${{ contains(github.ref, '-') }}
-  
+    
   build-macos:
     runs-on: macos-latest
     env:
@@ -111,14 +118,14 @@ jobs:
 
       - name: Build
         timeout-minutes: 120
-        env:
-          OUPUT_FILENAME: bim-${{ github.ref_name }}-macos
         run: |
           cargo build -r
           mkdir -p ./build/release
-          cp ./target/release/bim ./build/release/$OUPUT_FILENAME
+          cp ./target/release/bim ./build/release/bim-macos
+          cp ./target/release/bimc ./build/release/bimc-macos
           cd ./build/release
-          shasum -a 256 $OUPUT_FILENAME > $OUPUT_FILENAME.sha256
+          shasum -a 256 bim-macos > bim-macos.sha256
+          shasum -a 256 bimc-macos > bimc-macos.sha256
 
       - name: Upload Github Assets
         uses: softprops/action-gh-release@v1
