--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,20 +5,12 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[[bin]]
-name = "bim"
-path = "src/server.rs"
-
-[[bin]]
-name = "bimc"
-path = "src/client.rs"
-
 [dependencies]
-bim-core = "0"
 minreq = { version = "2", features = ["https-rustls", "json-using-serde"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 getopts = "0.2"
+url = "2"
 
 log = "0.4"
 env_logger = "0.9"
