--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 getopts = "0.2"
 url = "2"
+regex = "1"
 
 log = "0.4"
 env_logger = "0.9"
