--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1", features = ["full"] }
-minreq = { version = "2", features = ["https-rustls", "json-using-serde"] }
+reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1"
 getopts = "0.2"
